used sequence in identifier