@@ -1,10 +1,10 @@
 package com.mikosik.stork.model;
 
+import static com.mikosik.stork.common.Sequence.sequenceOf;
 import static com.mikosik.stork.model.Namespace.namespace;
+import static com.mikosik.stork.model.Namespace.namespaceOf;
 import static com.mikosik.stork.model.Variable.variable;
 import static java.lang.String.join;
-import static java.util.Arrays.asList;
-import static java.util.Collections.emptyList;
 import static java.util.Objects.hash;
 
 import java.util.LinkedList;
@@ -24,14 +24,14 @@ public class Identifier implements Expression {
   }
 
   public static Identifier identifier(Variable variable) {
-    return new Identifier(namespace(emptyList()), variable);
+    return new Identifier(namespaceOf(), variable);
   }
 
   public static Identifier identifier(String name) {
-    List<String> path = asList(name.split("\\."));
+    var path = sequenceOf(name.split("\\."));
     return identifier(
         namespace(path.subList(0, path.size() - 1)),
-        variable(path.get(path.size() - 1)));
+        variable(path.getLast()));
   }
 
   public String name() {
